// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TemplateStudio /> tests snapshot test for new template with git sync 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--small rightMargin StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/home"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                  data-icon="harness"
                >
                  <svg
                    height="16"
                    viewBox="0 0 25 25"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                      fill="#4facdf"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  common.home
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/home/orgs/dummy/projects/dummy/setup/resources/templates"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  common.templates
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main templateStudioTitle"
        >
          <svg
            fill="none"
            height="26"
            viewBox="0 0 210 26"
            width="210"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.3896 22.2945L1.10987 0.5H208.932L190.926 22.0853C189.121 24.2491 186.449 25.5 183.631 25.5H27.505C24.7836 25.5 22.1928 24.3328 20.3896 22.2945Z"
            />
          </svg>
          <p
            class="StyledProps--font StyledProps--main title StyledProps--font-size-xsmall StyledProps--font-weight-bold"
          >
            Studio
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody rightMargin"
    data-name="page-body"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <div
        class="noPipelineFoundContainer"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-center"
        >
          <img
            class="noPipelineFoundImage"
            src="test-file-stub"
          />
          <p
            class="StyledProps--font StyledProps--main noPipelineFound StyledProps--margin-top-medium StyledProps--margin-bottom-small"
          >
            <span>
              pipeline.gitExperience.noPipelineFound
            </span>
          </p>
          <p
            class="StyledProps--font StyledProps--main selectDiffBranch StyledProps--margin-top-xsmall StyledProps--margin-bottom-xlarge"
          >
            pipeline.gitExperience.selectDiffBranch
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main gitFilterContainer StyledProps--margin-right-small"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-top-small StyledProps--margin-left-large StyledProps--color StyledProps--color-grey600"
              data-icon="git-new-branch"
            >
              <svg
                height="16"
                viewBox="0 0 13 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="bp3-popover-wrapper branchSelector Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="branch"
                    placeholder="- Select -"
                    style="padding-right: 0px;"
                    type="text"
                    value="common.gitSync.defaultBranches"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rightBar"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main iconButton StyledProps--font StyledProps--font-weight-semi-bold StyledProps--font-size-xsmall Button--withLeftIcon Button--variation Button--variation-tertiary"
          data-testid="input-variable"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
            data-icon="pipeline-variables"
          >
            <svg
              height="28"
              viewBox="0 0 20 20"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M2.197 4.143a.624.624 0 01.564-.356h7.489c.344 0 .624.28.624.624v1.872a.624.624 0 01-1.248 0V5.035H4.072l3.23 3.975c.178.22.186.53.021.76l-3.342 4.626h5.645v-1.248a.624.624 0 111.248 0v1.873c0 .344-.28.624-.624.624H2.76a.624.624 0 01-.505-.99L6.03 9.426 2.276 4.805a.624.624 0 01-.079-.662zM15.9 9.276a5.276 5.276 0 00-.724 1.032c-.22.44-.612.912-.994 1.288-.37.365-.824.732-1.205.884a.624.624 0 11-.463-1.159c.138-.055.445-.272.792-.614.336-.331.62-.692.753-.958.184-.366.529-.88.914-1.308.193-.215.414-.427.646-.59.218-.153.523-.319.87-.319a.624.624 0 01.012 1.248c0 .001-.052.013-.164.092-.129.09-.279.229-.437.404z"
                fill="current-color"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M13.334 9.276c.317.352.596.774.725 1.032.22.44.611.912.993 1.288.37.365.824.732 1.205.884a.624.624 0 10.464-1.159c-.139-.055-.445-.272-.793-.614-.336-.331-.62-.692-.753-.958a6.497 6.497 0 00-.913-1.308 3.98 3.98 0 00-.647-.59c-.217-.153-.523-.319-.87-.319a.624.624 0 00-.012 1.248c0 .001.052.013.165.092.128.09.278.229.436.404z"
                fill="current-color"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            variablesText
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TemplateStudio /> tests snapshot test for new template without git sync 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--small rightMargin StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/home"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                  data-icon="harness"
                >
                  <svg
                    height="16"
                    viewBox="0 0 25 25"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                      fill="#4facdf"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  common.home
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/home/orgs/dummy/projects/dummy/setup/resources/templates"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  common.templates
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main templateStudioTitle"
        >
          <svg
            fill="none"
            height="26"
            viewBox="0 0 210 26"
            width="210"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.3896 22.2945L1.10987 0.5H208.932L190.926 22.0853C189.121 24.2491 186.449 25.5 183.631 25.5H27.505C24.7836 25.5 22.1928 24.3328 20.3896 22.2945Z"
            />
          </svg>
          <p
            class="StyledProps--font StyledProps--main title StyledProps--font-size-xsmall StyledProps--font-weight-bold"
          >
            Studio
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody rightMargin"
    data-name="page-body"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        style="height: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        >
          <h1
            class="StyledProps--font StyledProps--font-h1 StyledProps--main"
          >
            404
          </h1>
          <p
            class="StyledProps--font StyledProps--main"
          >
            Oops, we could not find this page.
          </p>
          <a
            href="/"
          >
            Go to Home
          </a>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="harness-logo-black"
          >
            <svg
              height="200"
              viewBox="0 0 141 30"
              width="200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M28.4 9.8l-7.5-7.5c-.1-.1-1.3-1.3-3.1-1.9-2.6-.9-5.1-.2-7.2 1.9L3 9.8c-.1.1-1.3 1.3-1.9 3.1C.2 15.5.9 18 3 20.1l7.5 7.5c.1.1 1.3 1.3 3.1 1.9.7.2 1.5.4 2.2.4 1.8 0 3.5-.8 5-2.2l7.5-7.5c.1-.1 1.3-1.3 1.9-3.1.9-2.6.2-5.2-1.8-7.3M16.3 4.5c.8.3 1.5.8 1.5.9L20 7.6l-4.3 4.3-4.3-4.3 2.2-2.2c.6-.6 1.4-1.3 2.7-.9M5.2 14.4c.3-.8.8-1.5.9-1.5l2.2-2.2 4.3 4.3-4.3 4.3L6 17.1c-.6-.6-1.2-1.5-.8-2.7m9.9 11.1c-.8-.3-1.5-.8-1.5-.9l-2.2-2.2 4.3-4.3 4.3 4.3-2.2 2.2c-.6.6-1.5 1.2-2.7.9m11.1-9.9c-.3.8-.8 1.5-.9 1.5l-2.2 2.2-4.4-4.3 4.3-4.3 2.2 2.2c.7.6 1.3 1.4 1 2.7"
                fill="#00ade4"
              />
              <path
                d="M44.6 25.6h3.9V14.8c0-3.3-2-5.8-5.5-5.8-1.7 0-3.5.7-4.4 2.1v-8h-3.9v22.4h3.9V17c0-2 1-4.5 3.3-4.5 2.1 0 2.7 1.2 2.7 3zm15.7-6.4c0 2.4-1.7 3.7-4.1 3.7-1.2 0-2.3-.8-2.3-2 0-1.3 1.1-2 2.3-2.1l4.1-.3zm3.2 6.6c.9 0 1.3-.2 1.9-.4v-2.8s-.2.1-.5.1c-.6 0-.9-.3-.9-1v-6c0-1.1-.1-2.2-.5-3.2-.9-2.4-3.3-3.3-6-3.3-3.6 0-6.4 1.6-6.7 5.2h3.7c.1-1.5 1.1-2.3 2.9-2.3 2.2 0 2.7 1 2.7 2.5v1l-4.7.3c-3.1.2-5.4 2-5.4 5 0 2.6 2 5 5.8 5 2.3 0 4.1-1.1 4.9-2.4.2 1.3 1.2 2.3 2.8 2.3M75.6 13h.6V9.4h-.5c-1.9 0-3.8.8-4.5 2.6l-.3-2.4h-3.3v16h3.9v-8.1c0-2.6 1.4-4.5 4.1-4.5m12.2 12.6h3.9V14.9c0-3.3-2-5.7-5.4-5.7-1.9 0-3.8.8-4.7 2.5l-.3-2.1H78v16h3.9v-6.5c0-1.4 0-3 .5-4.3.5-1.2 1.4-2 2.8-2 2 0 2.7 1.1 2.7 3zm16.5-9.6h-6.9c0-1 .3-1.8.8-2.5.6-.7 1.5-1.2 2.7-1.2 1.1 0 1.9.4 2.4.9.6.6 1 1.6 1 2.8m3.9 1.7c.1-2-.2-3.8-1.4-5.6-1.3-2-3.5-3-5.9-3-2.2 0-3.9.8-5.1 2-1.5 1.6-2.3 3.9-2.3 6.4 0 2.6.9 4.9 2.5 6.4 1.3 1.2 2.9 2 5.1 2 2 0 4-.6 5.4-2.3.6-.7 1.3-2 1.4-3h-3.7c-.2.6-.4 1-.8 1.4-.6.6-1.2.8-2.3.8-1 0-1.8-.5-2.4-1-.8-.7-1.2-1.9-1.2-3.1h10.7c-.1-.3 0-1 0-1m5.1-3.7c0-.8.6-1.4 1.2-1.7.6-.2 1.1-.2 1.7-.2.8 0 1.6.3 2.1.7.4.4.6.9.6 1.5h3.7c0-1.2-.6-2.4-1.4-3.3-1.2-1.3-3.1-1.9-5-1.9-2 0-3.7.6-4.9 1.6-1 .8-1.6 2-1.6 3.6 0 2 1.5 3.8 3.7 4.3 1.4.3 3 .4 4.4.6 1 .2 1.6.8 1.6 1.7 0 1.8-2 2-3.3 2-1.1 0-1.8-.2-2.4-.7-.4-.3-.7-.9-.8-1.5h-3.6c.1 1.3.8 2.5 1.7 3.3 1.3 1.3 3.1 1.9 5.2 1.9 2.2 0 4.2-.6 5.5-1.9.8-.8 1.4-2 1.4-3.5 0-2.5-1.8-4.1-4.4-4.5-1.6-.2-2-.3-3.4-.5-1 0-2-.3-2-1.5m20.5.3h3.7c0-1.2-.6-2.4-1.4-3.3-1.2-1.3-3.1-1.9-5-1.9-2 0-3.7.6-4.9 1.6-1 .8-1.6 2-1.6 3.6 0 2 1.5 3.8 3.7 4.3 1.4.3 3 .4 4.4.6 1 .2 1.6.8 1.6 1.7 0 1.8-2 2-3.3 2-1.1 0-1.8-.2-2.4-.7-.4-.3-.7-.9-.8-1.5h-3.6c.1 1.3.8 2.5 1.7 3.3 1.3 1.3 3.1 1.9 5.2 1.9 2.2 0 4.2-.6 5.5-1.9.8-.8 1.4-2 1.4-3.5 0-2.5-1.8-4.1-4.4-4.5-1.6-.2-2-.3-3.4-.5-.9-.1-1.9-.5-1.9-1.6 0-.8.6-1.4 1.2-1.7.6-.2 1.1-.2 1.7-.2.8 0 1.6.3 2.1.7.2.5.5 1 .5 1.6"
                fill="#060000"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="rightBar"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main iconButton StyledProps--font StyledProps--font-weight-semi-bold StyledProps--font-size-xsmall Button--withLeftIcon Button--variation Button--variation-tertiary"
          data-testid="input-variable"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
            data-icon="pipeline-variables"
          >
            <svg
              height="28"
              viewBox="0 0 20 20"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M2.197 4.143a.624.624 0 01.564-.356h7.489c.344 0 .624.28.624.624v1.872a.624.624 0 01-1.248 0V5.035H4.072l3.23 3.975c.178.22.186.53.021.76l-3.342 4.626h5.645v-1.248a.624.624 0 111.248 0v1.873c0 .344-.28.624-.624.624H2.76a.624.624 0 01-.505-.99L6.03 9.426 2.276 4.805a.624.624 0 01-.079-.662zM15.9 9.276a5.276 5.276 0 00-.724 1.032c-.22.44-.612.912-.994 1.288-.37.365-.824.732-1.205.884a.624.624 0 11-.463-1.159c.138-.055.445-.272.792-.614.336-.331.62-.692.753-.958.184-.366.529-.88.914-1.308.193-.215.414-.427.646-.59.218-.153.523-.319.87-.319a.624.624 0 01.012 1.248c0 .001-.052.013-.164.092-.129.09-.279.229-.437.404z"
                fill="current-color"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M13.334 9.276c.317.352.596.774.725 1.032.22.44.611.912.993 1.288.37.365.824.732 1.205.884a.624.624 0 10.464-1.159c-.139-.055-.445-.272-.793-.614-.336-.331-.62-.692-.753-.958a6.497 6.497 0 00-.913-1.308 3.98 3.98 0 00-.647-.59c-.217-.153-.523-.319-.87-.319a.624.624 0 00-.012 1.248c0 .001.052.013.165.092.128.09.278.229.436.404z"
                fill="current-color"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            variablesText
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TemplateStudio /> tests snapshot test for template studio in visual view 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--small rightMargin StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/home"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                  data-icon="harness"
                >
                  <svg
                    height="16"
                    viewBox="0 0 25 25"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                      fill="#4facdf"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  common.home
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/home/orgs/dummy/projects/dummy/setup/resources/templates"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  common.templates
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main templateStudioTitle"
        >
          <svg
            fill="none"
            height="26"
            viewBox="0 0 210 26"
            width="210"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.3896 22.2945L1.10987 0.5H208.932L190.926 22.0853C189.121 24.2491 186.449 25.5 183.631 25.5H27.505C24.7836 25.5 22.1928 24.3328 20.3896 22.2945Z"
            />
          </svg>
          <p
            class="StyledProps--font StyledProps--main title StyledProps--font-size-xsmall StyledProps--font-weight-bold"
          >
            Studio
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody rightMargin"
    data-name="page-body"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <div
        class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-xlarge StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
        style="height: 52px;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
          style="height: 100%;"
        >
          <div
            class="StyledProps--font StyledProps--main subHeaderLeftView"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-right-medium StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <div
                class="StyledProps--font StyledProps--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-black"
                    data-icon="template-library"
                  >
                    <svg
                      height="20"
                      viewBox="0 0 12 13"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <defs>
                        <path
                          d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                          id="template-library_svg__a"
                        />
                      </defs>
                      <clippath
                        id="template-library_svg__b"
                      >
                        <use
                          overflow="visible"
                          xlink:href="#template-library_svg__a"
                        />
                      </clippath>
                      <path
                        clip-path="url(#template-library_svg__b)"
                        d="M-5-5h22v23H-5z"
                        fill="#25a6f7"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target Text--targetClass"
                    >
                      <p
                        class="StyledProps--font StyledProps--main templateName StyledProps--color StyledProps--color-grey700 StyledProps--font-weight-bold"
                        tabindex="0"
                      >
                        CI Stage Template 2
                      </p>
                    </span>
                  </span>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey800"
                      data-icon="Edit"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="bp3-popover-wrapper DropDown--main versionDropDown"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                      data-testid="dropdown-button"
                      style="min-width: 130px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                          data-testid="dropdown-value"
                          style="--text-line-clamp: 1;"
                        >
                          Version1 (Stable)
                        </p>
                      </div>
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                          data-icon="main-chevron-down"
                        >
                          <svg
                            height="8"
                            viewBox="0 0 14 8"
                            width="8"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                              fill="#4d5969"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="PillToggle--optionBtns visualYamlToggle"
            >
              <div
                class="PillToggle--item PillToggle--selected"
                data-name="toggle-option-one"
                role="button"
                tabindex="0"
              >
                VISUAL
              </div>
              <div
                class="PillToggle--item"
                data-name="toggle-option-two"
                role="button"
                tabindex="0"
              >
                YAML
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <div
                class="StyledProps--font StyledProps--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
                >
                  <span
                    class="bp3-popover-wrapper main"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--withRightIcon Button--variation Button--variation-primary"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                          data-icon="send-data"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 9 12"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M3.533 5.013L2.279 6.301a.653.653 0 01-.94 0 .696.696 0 010-.966l2.394-2.46a.655.655 0 01.94 0l2.394 2.46c.127.13.194.302.194.48a.7.7 0 01-.194.48.655.655 0 01-.94 0l-1.26-1.282v5.94c0 .377-.3.686-.668.686a.678.678 0 01-.666-.685v-5.94z"
                              fill="#25A6F7"
                            />
                            <path
                              d="M.5.775h7.005v.2H.5v-.2z"
                              stroke="#25A6F7"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          save
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                  <button
                    class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      common.discard
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main canvasContainer"
      />
      <div
        class="rightBar"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main iconButton StyledProps--font StyledProps--font-weight-semi-bold StyledProps--font-size-xsmall Button--withLeftIcon Button--variation Button--variation-tertiary"
          data-testid="input-variable"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
            data-icon="pipeline-variables"
          >
            <svg
              height="28"
              viewBox="0 0 20 20"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M2.197 4.143a.624.624 0 01.564-.356h7.489c.344 0 .624.28.624.624v1.872a.624.624 0 01-1.248 0V5.035H4.072l3.23 3.975c.178.22.186.53.021.76l-3.342 4.626h5.645v-1.248a.624.624 0 111.248 0v1.873c0 .344-.28.624-.624.624H2.76a.624.624 0 01-.505-.99L6.03 9.426 2.276 4.805a.624.624 0 01-.079-.662zM15.9 9.276a5.276 5.276 0 00-.724 1.032c-.22.44-.612.912-.994 1.288-.37.365-.824.732-1.205.884a.624.624 0 11-.463-1.159c.138-.055.445-.272.792-.614.336-.331.62-.692.753-.958.184-.366.529-.88.914-1.308.193-.215.414-.427.646-.59.218-.153.523-.319.87-.319a.624.624 0 01.012 1.248c0 .001-.052.013-.164.092-.129.09-.279.229-.437.404z"
                fill="current-color"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M13.334 9.276c.317.352.596.774.725 1.032.22.44.611.912.993 1.288.37.365.824.732 1.205.884a.624.624 0 10.464-1.159c-.139-.055-.445-.272-.793-.614-.336-.331-.62-.692-.753-.958a6.497 6.497 0 00-.913-1.308 3.98 3.98 0 00-.647-.59c-.217-.153-.523-.319-.87-.319a.624.624 0 00-.012 1.248c0 .001.052.013.165.092.128.09.278.229.436.404z"
                fill="current-color"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            variablesText
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
